@@ -1,7 +1,7 @@
 Package: copula
 Version: 0.999-17
 VersionNote: Last CRAN: 0.999-16 on 2017-01-07
-Date: 2017-02-11
+Date: 2017-03-17
 Title: Multivariate Dependence with Copulas
 Author: Marius Hofert <marius.hofert@uwaterloo.ca>,
  Ivan Kojadinovic <ivan.kojadinovic@univ-pau.fr>,
